--- a/ch02/01_main-chapter-code/ch02.ipynb
+++ b/ch02/01_main-chapter-code/ch02.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "b7b0465b",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "3386e088",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "e299f513",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "26013e24",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "d6254605",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
      "text": [
       "<>:19: SyntaxWarning: invalid escape sequence '\\s'\n",
       "<>:19: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_8612\\3050843674.py:19: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_28708\\3050843674.py:19: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  text = re.sub('\\s+([,.?!\"()\\'])',r'\\1', text)\n"
      ]
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "24cab3fe",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "de5f73b0",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "e826b91f",
    "metadata": {},
    "outputs": [],
@@ -244,11 +244,423 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "c8bcf9b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: tiktoken in d:\\softwares\\anaconda_files\\lib\\site-packages (0.9.0)\n",
+      "Requirement already satisfied: regex>=2022.1.18 in d:\\softwares\\anaconda_files\\lib\\site-packages (from tiktoken) (2024.9.11)\n",
+      "Requirement already satisfied: requests>=2.26.0 in d:\\softwares\\anaconda_files\\lib\\site-packages (from tiktoken) (2.32.3)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in d:\\softwares\\anaconda_files\\lib\\site-packages (from requests>=2.26.0->tiktoken) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in d:\\softwares\\anaconda_files\\lib\\site-packages (from requests>=2.26.0->tiktoken) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in d:\\softwares\\anaconda_files\\lib\\site-packages (from requests>=2.26.0->tiktoken) (2.2.3)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in d:\\softwares\\anaconda_files\\lib\\site-packages (from requests>=2.26.0->tiktoken) (2025.1.31)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install tiktoken"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "39490c22",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tiktoken version: 0.9.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from importlib.metadata import version\n",
+    "import tiktoken\n",
+    "print(\"Tiktoken version:\", version(\"tiktoken\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "64d2812d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15496, 11, 466, 345, 588, 8887, 30, 220, 50256, 554, 262, 4252, 18250, 8812, 2114, 1659, 617, 34680, 27271, 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Byte pair encoding (BPE) tokenizer\n",
+    "tokenizer = tiktoken.get_encoding(\"gpt2\")\n",
+    "text = (\n",
+    "    \"Hello, do you like tea? <|endoftext|> In the sunlit terraces\"\n",
+    "     \"of someunknownPlace.\"\n",
+    ")\n",
+    "integers = tokenizer.encode(text, allowed_special={\"<|endoftext|>\"})\n",
+    "print(integers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "902b33d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, do you like tea? <|endoftext|> In the sunlit terracesof someunknownPlace.\n"
+     ]
+    }
+   ],
+   "source": [
+    "strings = tokenizer.decode(integers)\n",
+    "print(strings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "488905e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[33901, 86, 343, 86, 220, 959]\n",
+      "Akwirw ier\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 2.1 Byte pair encoding of unknown words\n",
+    "\n",
+    "text = \"Akwirw ier\"\n",
+    "ids = tokenizer.encode(text)\n",
+    "print(ids)\n",
+    "print(tokenizer.decode(ids))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "26bd7faa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5145\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"the-verdict.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    raw_text = f.read()\n",
+    "\n",
+    "enc_text = tokenizer.encode(raw_text)\n",
+    "print(len(enc_text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ad2d32ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: [290, 4920, 2241, 287]\n",
+      "y:      [4920, 2241, 287, 257]\n"
+     ]
+    }
+   ],
+   "source": [
+    "enc_sample = enc_text[50:]\n",
+    "context_size = 4         #1\n",
+    "x = enc_sample[:context_size]\n",
+    "y = enc_sample[1:context_size+1]\n",
+    "print(f\"x: {x}\")\n",
+    "print(f\"y:      {y}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "df8b142b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[290] ----> 4920\n",
+      "[290, 4920] ----> 2241\n",
+      "[290, 4920, 2241] ----> 287\n",
+      "[290, 4920, 2241, 287] ----> 257\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, context_size+1):\n",
+    "    context = enc_sample[:i]\n",
+    "    desired = enc_sample[i]\n",
+    "    print(context, \"---->\", desired)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "11033a79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " and ---->  established\n",
+      " and established ---->  himself\n",
+      " and established himself ---->  in\n",
+      " and established himself in ---->  a\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, context_size+1):\n",
+    "    context = enc_sample[:i]\n",
+    "    desired = enc_sample[i]\n",
+    "    print(tokenizer.decode(context), \"---->\", tokenizer.decode([desired]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "c5c5096e",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# A dataset for batched inputs and targets\n",
+    "import torch \n",
+    "from torch.utils.data import Dataset, DataLoader \n",
+    "class GPTDatasetV1(Dataset):\n",
+    "    def __init__(self, txt, tokenizer, max_length, stride):\n",
+    "        self.input_ids = []\n",
+    "        self.targets_ids = []\n",
+    "\n",
+    "        token_ids = tokenizer.encode(txt)\n",
+    "        for i in range(0, len(token_ids) - max_length, stride):\n",
+    "            input_chunk = token_ids[i:i+max_length]\n",
+    "            target_chunk = token_ids[i+stride:i+max_length+stride]\n",
+    "            self.input_ids.append(torch.tensor(input_chunk))\n",
+    "            self.targets_ids.append(torch.tensor(target_chunk))\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.input_ids)\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        return self.input_ids[idx], self.targets_ids[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "75017b36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_dataloader_v1(txt, batch_size=4, max_length=256,\n",
+    "                        stride=128, shuffle=True, drop_last=True,\n",
+    "                        num_workers=0):\n",
+    "    tokenizer = tiktoken.get_encoding(\"gpt2\")\n",
+    "    dataset = GPTDatasetV1(txt, tokenizer, max_length, stride)\n",
+    "    dataloader = DataLoader(\n",
+    "        dataset,\n",
+    "        batch_size = batch_size,\n",
+    "        shuffle = shuffle,\n",
+    "        drop_last = drop_last,\n",
+    "        num_workers = num_workers\n",
+    "    )\n",
+    "\n",
+    "    return dataloader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b2dff294",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[tensor([[  40,  367, 2885, 1464]]), tensor([[ 367, 2885, 1464, 1807]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"the-verdict.txt\",\"r\", encoding=\"utf-8\") as f:\n",
+    "    raw_text = f.read()\n",
+    "\n",
+    "dataloader = create_dataloader_v1(raw_text, batch_size=1, max_length=4, stride=1, shuffle=False)\n",
+    "data_iter = iter(dataloader)\n",
+    "first_batch = next(data_iter)\n",
+    "print(first_batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "833e40ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter containing:\n",
+      "tensor([[ 0.3374, -0.1778, -0.1690],\n",
+      "        [ 0.9178,  1.5810,  1.3010],\n",
+      "        [ 1.2753, -0.2010, -0.1606],\n",
+      "        [-0.4015,  0.9666, -1.1481],\n",
+      "        [-1.1589,  0.3255, -0.6315],\n",
+      "        [-2.8400, -0.7849, -1.4096]], requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create token embedding\n",
+    "vocab_size = 6\n",
+    "output_dim = 3\n",
+    "\n",
+    "torch.manual_seed(123)\n",
+    "embedding_layer = torch.nn.Embedding(vocab_size, output_dim)\n",
+    "print(embedding_layer.weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "cd98dd10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_size = 50257\n",
+    "output_dim = 256\n",
+    "token_embedding_layer = torch.nn.Embedding(vocab_size, output_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "719efcc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token IDs:\n",
+      " tensor([[   40,   367,  2885,  1464],\n",
+      "        [ 1807,  3619,   402,   271],\n",
+      "        [10899,  2138,   257,  7026],\n",
+      "        [15632,   438,  2016,   257],\n",
+      "        [  922,  5891,  1576,   438],\n",
+      "        [  568,   340,   373,   645],\n",
+      "        [ 1049,  5975,   284,   502],\n",
+      "        [  284,  3285,   326,    11]])\n",
+      "\n",
+      "Inputs shape:\n",
+      " torch.Size([8, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_length = 4\n",
+    "dataloader = create_dataloader_v1(\n",
+    "    raw_text, batch_size=8, max_length=max_length,\n",
+    "   stride=max_length, shuffle=False\n",
+    ")\n",
+    "data_iter = iter(dataloader)\n",
+    "inputs, targets = next(data_iter)\n",
+    "print(\"Token IDs:\\n\", inputs)\n",
+    "print(\"\\nInputs shape:\\n\", inputs.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d4a21af5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([8, 4, 256])\n"
+     ]
+    }
+   ],
+   "source": [
+    "token_embeddings = token_embedding_layer(inputs)\n",
+    "print(token_embeddings.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "5c8d20ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 256])\n"
+     ]
+    }
+   ],
+   "source": [
+    "context_length = max_length\n",
+    "pos_embedding_layer = torch.nn.Embedding(context_length, output_dim)\n",
+    "pos_embeddings = pos_embedding_layer(torch.arange(context_length))\n",
+    "print(pos_embeddings.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "fce236b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([8, 4, 256])\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_embeddings = token_embeddings + pos_embeddings\n",
+    "print(input_embeddings.shape)"
+   ]
   }
  ],
  "metadata": {
